--- a/layouts/partials/post/gallery.html
+++ b/layouts/partials/post/gallery.html
@@ -1,6 +1,7 @@
 {{ $GALLERY_IMAGES_DISPLAYED_LIMIT := 3 }}
-{{ if and .Site.Params.imageGallery .Params.gallery }}
-  {{ $galleryLength := len .Params.gallery }}
+{{ if and .Site.Params.imageGallery (or .Params.gallery .Params.photos) }}
+  {{ $gallery := .Params.gallery | default .Params.photos }}
+  {{ $galleryLength := len $gallery }}
   {{ $imageGalleryClass := "" }}
   {{ if gt $galleryLength 0 }}
     <div class="image-gallery">
@@ -8,7 +9,7 @@
         <span>{{ i18n "post.gallery"}} {{ if gt $galleryLength 1 }}{{ replace (i18n "post.image.other") "{n}" $galleryLength }}{{ else }}{{ i18n "post.image.one" }}{{ end }}</span>
       </div>
       <div class="image-gallery-photos {{ if gt $galleryLength 2 }}image-gallery-photos--thumbnail{{ end }}">
-        {{ range $index, $element := .Params.gallery }}
+        {{ range $index, $element := $gallery }}
           {{ $image := findRE "[^\\s\"']+|\"([^\"]*)\"|'([^']*)'" $element }}
           {{ $imageLength := len $image }}
           <div class="photo-box">
