--- a/exampleSite/static/css/video.css
+++ b/exampleSite/static/css/video.css
@@ -59,4 +59,18 @@
   height: 400px;
   border: 1px solid #e1e4e8;
   border-radius: 6px;
+}
+
+/* Slideshare and Speaker Deck containers */
+.slideshare-container,
+.speakerdeck-container {
+  margin: 1rem 0;
+}
+
+.slideshare-container iframe,
+.speakerdeck-container iframe {
+  width: 100%;
+  height: 400px;
+  border: 1px solid #e1e4e8;
+  border-radius: 6px;
 } 
